Improve recent colors sryles.

--- a/packages/ckeditor5-font/theme/fontcolor.css
+++ b/packages/ckeditor5-font/theme/fontcolor.css
@@ -29,11 +29,16 @@
 	transition: 200ms ease box-shadow;
 }
 
+.ck .ck-disabled.ck-color-table__color-tile {
+	cursor: unset;
+	transition: unset;
+}
+
 .ck .ck-color-table__color-tile_bordered {
 	box-shadow: 0 0 0 1px var(--ck-color-table-color-tile-border);
 }
 
-.ck .ck-color-table__color-tile:hover {
+.ck .ck-color-table__color-tile:hover :not( .ck-disabled ) {
 	box-shadow: 0 0 0 2px var(--ck-color-table-color-tile-border-active);
 }
 
