Use switch button as toggle option in custom link atributes.

--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -8,7 +8,8 @@
 .ck.ck-link-form {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
+	max-width: 500px;
 
 	& .ck-label {
 		display: none;
