Add label and aria role for toolbar.

--- a/packages/ckeditor5-ui/theme/components/toolbar/toolbar.css
+++ b/packages/ckeditor5-ui/theme/components/toolbar/toolbar.css
@@ -19,6 +19,10 @@
 	&.ck-toolbar_floating {
 		flex-wrap: nowrap;
 	}
+
+	& .ck.ck-toolbar__label {
+		display: none;
+	}
 }
 
 .ck.ck-toolbar__separator {
