--- a/packages/ckeditor5-ui/theme/components/panel/fakepanel.css
+++ b/packages/ckeditor5-ui/theme/components/panel/fakepanel.css
@@ -3,25 +3,25 @@
  * For licensing, see LICENSE.md.
  */
 
-.ck .ck-fake-panels {
+.ck .ck-fake-panel {
 	position: absolute;
 
 	/* Fake panels should be placed under main balloon content. */
 	z-index: calc(var(--ck-z-modal) - 1);
 }
 
-.ck .ck-fake-panels div {
+.ck .ck-fake-panel div {
 	position: absolute;
 }
 
-.ck .ck-fake-panels div:nth-child( 1 ) {
+.ck .ck-fake-panel div:nth-child( 1 ) {
 	z-index: 3;
 }
 
-.ck .ck-fake-panels div:nth-child( 2 ) {
+.ck .ck-fake-panel div:nth-child( 2 ) {
 	z-index: 2;
 }
 
-.ck .ck-fake-panels div:nth-child( 3 ) {
+.ck .ck-fake-panel div:nth-child( 3 ) {
 	z-index: 1;
 }
