--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -25,10 +25,10 @@
 	}
 }
 
-/* Style link form differently when manual decoratos are available.
+/* Style link form differently when manual decorators are available.
  * See: https://github.com/ckeditor/ckeditor5-link/issues/186.
  */
-.ck.ck-link-form_decorators {
+.ck.ck-link-form_layout-vertical {
 	flex-wrap: wrap;
 
 	& .ck-labeled-input {
