--- a/packages/ckeditor5-ui/theme/components/toolbar/toolbar.css
+++ b/packages/ckeditor5-ui/theme/components/toolbar/toolbar.css
@@ -5,6 +5,10 @@
 
 @import "../../mixins/_unselectable.css";
 
+:root {
+	--ck-toolbar-groupped-dropdown-arrow-size: calc(0.5 * var(--ck-icon-size));
+}
+
 .ck.ck-toolbar {
 	@mixin ck-unselectable;
 
