--- a/packages/ckeditor5-ui/theme/components/dialog/dialog.css
+++ b/packages/ckeditor5-ui/theme/components/dialog/dialog.css
@@ -33,7 +33,7 @@
 		}
 	}
 
-	@nest .ck.ck-dialog-overlay.ck-dialog-overlay__transparent & {
+	.ck.ck-dialog-overlay.ck-dialog-overlay__transparent & {
 		pointer-events: all;
 	}
 }
