--- a/packages/ckeditor5-bookmark/theme/bookmarkform.css
+++ b/packages/ckeditor5-bookmark/theme/bookmarkform.css
@@ -34,6 +34,7 @@
 				&:nth-last-child(1) {
 					margin: var(--ck-spacing-large);
 					padding: 0 var(--ck-spacing-standard);
+					border-radius: var(--ck-border-radius);
 				}
 			}
 		}
