The bookmark label field should not be selectable.

--- a/packages/ckeditor5-bookmark/theme/bookmarkactions.css
+++ b/packages/ckeditor5-bookmark/theme/bookmarkactions.css
@@ -4,6 +4,7 @@
  */
 
 @import "@ckeditor/ckeditor5-ui/theme/mixins/_rwd.css";
+@import "@ckeditor/ckeditor5-ui/theme/mixins/_unselectable.css";
 
 .ck.ck-bookmark-actions {
 	display: flex;
@@ -16,6 +17,9 @@
 		text-overflow: ellipsis;
 		text-align: center;
 		overflow: hidden;
+
+		@mixin ck-unselectable;
+		cursor: default;
 	}
 
 	@mixin ck-media-phone {
