--- a/packages/ckeditor5-link/theme/linktoolbar.css
+++ b/packages/ckeditor5-link/theme/linktoolbar.css
@@ -3,12 +3,10 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
  */
 
-.ck.ck-link-toolbar {
-	& .ck-link-toolbar__preview {
-		display: inline-block;
+.ck.ck-link-toolbar__preview {
+	display: inline-block;
 
-		& .ck-button__label {
-			overflow: hidden;
-		}
+	& .ck-button__label {
+		overflow: hidden;
 	}
 }
