--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -14,7 +14,7 @@
 	& .ck-form__header {
 		padding: var(--ck-spacing-small) var(--ck-spacing-medium);
 
-		& > * + * {
+		& > .ck:not(:first-child) {
 			margin-left: var(--ck-spacing-small);
 		}
 	}
@@ -28,11 +28,11 @@
 			margin: 0;
 
 			@mixin ck-media-phone {
-				margin: var(--ck-spacing-medium);
+				margin: var(--ck-spacing-large) var(--ck-spacing-medium)  var(--ck-spacing-medium)  var(--ck-spacing-medium);
 			}
 		}
 
-		& > * + * {
+		& > .ck:not(:first-child) {
 			margin-top: var(--ck-spacing-large);
 		}
 
@@ -48,19 +48,18 @@
 				padding: var(--ck-spacing-tiny) var(--ck-spacing-large);
 				margin-left: var(--ck-spacing-medium);
 				height: 30px;
-				font-weight: bold;
 			}
 
 			@mixin ck-media-phone {
 				flex-direction: column;
 
-				&>*,
-				& .ck-button-insert {
+				& > .ck {
 					margin: 0;
 				}
 
 				& .ck-button-insert {
 					margin-top: var(--ck-spacing-large);
+					justify-content: center;
 				}
 			}
 		}
@@ -77,7 +76,7 @@
 			padding: var(--ck-spacing-medium) var(--ck-spacing-large);
 			border-radius: 0;
 	
-			&>.ck-button__label {
+			& > .ck-button__label {
 				flex-grow: 1;
 			}
 		}
