--- a/packages/ckeditor5-ui/theme/components/dialog/dialog.css
+++ b/packages/ckeditor5-ui/theme/components/dialog/dialog.css
@@ -27,8 +27,11 @@
 
 	& .ck.ck-form__header  {
 		flex-shrink: 0;
+	}
 
-		& .ck-form__header__label {
+	/* Modals should not be draggable. */
+	&:not(.ck-dialog_modal) {
+		& .ck.ck-form__header .ck-form__header__label {
 			cursor: grab;
 		}
 	}
