Feature (link): Properly handle opening and closing of the Advanced panel and changing the value of link decorators.

--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -6,6 +6,8 @@
 @import "@ckeditor/ckeditor5-ui/theme/mixins/_rwd.css";
 
 .ck.ck-link__panel {
+	width: 340px; /* TODO: 340px instead of 300px, because of generic min-width on inputs */
+
 	&:focus {
 		outline: none;
 	}
@@ -36,8 +38,12 @@
 			margin-top: var(--ck-spacing-large);
 		}
 
-		input {
-			width: 100%;
+		& .ck-labeled-field-view {
+			flex-grow: 1;
+
+			& input {
+				width: 100%;
+			}
 		}
 
 		/* "Link" input field and the "Insert" button */
@@ -67,10 +73,13 @@
 
 	/* Link list */
 	& .ck-link__list {
-		margin-top: var(--ck-spacing-medium);
-		border-top: 1px solid var(--ck-color-base-border);
 		display: flex;
 		flex-direction: column;
+
+		&.ck-link__list-border-top {
+			margin-top: var(--ck-spacing-medium);
+			border-top: 1px solid var(--ck-color-base-border);
+		}
 
 		& .ck-link__button {
 			padding: var(--ck-spacing-medium) var(--ck-spacing-large);
