--- a/packages/ckeditor5-link/theme/linkform.css
+++ b/packages/ckeditor5-link/theme/linkform.css
@@ -100,7 +100,7 @@
 		}
 	}
 
-	& .ck-link__empty-prompt {
+	& .ck-link__empty-list-info {
 		padding: calc( 2 * var(--ck-spacing-large) ) var(--ck-spacing-medium);
 		text-align: center;
 		font-style: italic;
