--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linktoolbar.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linktoolbar.css
@@ -3,23 +3,20 @@
  * For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
  */
 
+@import "@ckeditor/ckeditor5-ui/theme/mixins/_dir.css";
+
 a.ck.ck-button.ck-link-toolbar__preview {
 	padding: 0 var(--ck-spacing-medium);
 	color: var(--ck-color-link-default);
+	cursor: pointer;
+	justify-content: center;
 
 	& .ck.ck-button__label {
 		text-overflow: ellipsis;
-		cursor: pointer;
 
 		/* Match the box model of the link editor form's input so the balloon
 		does not change width when moving between actions and the form. */
 		max-width: var(--ck-input-width);
-		min-width: 3em;
-		text-align: center;
-
-		&:hover {
-			text-decoration: underline;
-		}
 	}
 
 	&,
@@ -33,14 +30,21 @@ a.ck.ck-button.ck-link-toolbar__preview {
 		box-shadow: none;
 	}
 
+	&:hover,
 	&:focus {
-		& .ck-button__label {
-			text-decoration: underline;
-		}
+		text-decoration: underline;
 	}
 
-	& .ck.ck-icon.ck-button__icon {
-		margin: 0;
+	&.ck-button_with-text .ck.ck-icon.ck-button__icon {
+		@mixin ck-dir ltr {
+			margin-right: var(--ck-spacing-tiny);
+			margin-left: var(--ck-spacing-small);
+		}
+
+		@mixin ck-dir rtl {
+			margin-left: var(--ck-spacing-tiny);
+			margin-right: var(--ck-spacing-small);
+		}
 	}
 
 	&:has( .ck-icon ) {
