fix: switched to relative `font-size`
Resolves https://github.com/ckeditor/ckeditor5/issues/17416

--- a/packages/ckeditor5-ui/theme/globals/_poweredby.css
+++ b/packages/ckeditor5-ui/theme/globals/_poweredby.css
@@ -35,7 +35,7 @@
 		}
 
 		& .ck-powered-by__label {
-			font-size: 7.5px;
+			font-size: 0.57692308em;
 			letter-spacing: -.2px;
 			padding-left: 2px;
 			text-transform: uppercase;
